<resources>
    <string name="app_name">GithubIssuesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pr_number">PR Number: </string>
    <string name="patch_url">Patch url: </string>
    <string name="user">User: </string>
    <string name="title">Title: </string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown">Unknown</string>
    <string name="org">Organisation</string>
    <string name="repository">Repository</string>
    <string name="all">All</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="submit">Submit</string>
</resources>